# reqstool-python-poetry-plugin

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: build-docs.yml  build.yml  check-semantic-pr.yml  check_release.yml  lint.yml  publish_gh_pages.yml  publish_pypi_prod.yml  publish_pypi_test.yml  renovate-approve.yml
docs/: antora-playbook.yml
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: configuration.adoc  description.adoc  index.adoc  installation.adoc  usage.adoc
docs/reqstool/: reqstool_config.yml  requirements.yml
src/reqstool_python_poetry_plugin/: plugin.py
tests/e2e/reqstool_python_poetry_plugin/: test_build_e2e.py
tests/fixtures/test_project/: AGENTS.md  README.md  pyproject.toml
tests/fixtures/test_project/docs/reqstool/: requirements.yml  software_verification_cases.yml
tests/fixtures/test_project/src/mypackage/: main.py
tests/fixtures/test_project/tests/: test_main.py
