[build-system]
build-backend = "poetry_dynamic_versioning.backend"
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]

[project]
dynamic = ["version"]

[tool.poetry]
name = "reqstool-python-poetry-plugin"
version = "0.0.0"
description = "Reqstool Python Poetry Plugin"
authors = ["LFV SYSDEV <sysdev@lfv.com>"]
license = "MIT License"
readme = "README.md"
repository = "https://github.com/Luftfartsverket/reqstool-python-poetry-plugin.git"
homepage = "https://github.com/Luftfartsverket/reqstool-python-poetry-plugin.git"
documentation = "https://github.com/Luftfartsverket/reqstool-python-poetry-plugin.git"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]

[tool.poetry.dependencies]
python = "^3.10"
poetry = "2.3.1"
reqstool-python-decorators = "0.0.8"
poetry-dynamic-versioning = "1.10.0"

[tool.poetry.group.dev.dependencies]
black = { version = "26.1.0" }
flake8 = { version = "7.3.0" }
flake8-pyproject = { version = "1.2.4" }
pytest = { version = "9.0.2" }
pytest-cov = { version = "7.0.0" }

[tool.poetry.plugins."poetry.plugin"]
reqstool = "reqstool_python_poetry_plugin.plugin:ReqstoolPlugin"

[tool.pytest.ini_options]
addopts = [
    "-rsxX",
    "-s",
    "--import-mode=importlib",
    "--log-cli-level=DEBUG",
    '-m not slow or not integration',
]
pythonpath = [".", "src", "tests"]
testpaths = ["tests"]
markers = [
    "flaky: tests that can randomly fail through no change to the code",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: tests that require external resources",
]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.flake8]
ignore = ["W503"]
max-line-length = 120
max-complexity = 10

[tool.poetry-dynamic-versioning]
enable = true
style = "pep440"
dirty = false
format = "{base}.dev{distance}"

[tool.reqstool]
sources = ["src", "tests"]
test_results = "build/**/junit.xml"
dataset_directory = "docs/reqstool"
output_directory = "build/reqstool"
